see if mathjax works

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ twitter_username: Akramoz
 github_username:  Akramz
 
 # Build settings
-markdown: kramdown
+markdown: maruku
 theme: minima
 plugins:
   - jekyll-feed
