--- a/_config.yml
+++ b/_config.yml
@@ -16,18 +16,18 @@
 title: Akramz
 email: MedAkramZaytar@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
- Akramz Backyard Technology ..
+  Akramz Backyard Technology ..
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Akramoz
-github_username:  Akramz
+github_username: Akramz
 
 # Build settings
 markdown: maruku
 theme: minima
 plugins:
   - jekyll-feed
-
+  - jekyll-jupyter-notebook
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
